--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
 		  <b>This text is bold.</b>
 		  <em>This text is italic.</em>
 		  <i>This text is also in italic.</i>
+		  <p>This is in <b>bold</b>. This part is in <i>italic</i>.</i></p>
+		  <p>This part is both in <b><i>bold and italic.</b></i></p>
       </body>
  </html>
